# rust_terminal

./: .gitignore  Cargo.toml
src/: main.rs  printer.rs
