[package]
name = "rust_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.26.1", features = ["event-stream", "serde", "filedescriptor", "futures-core", "bracketed-paste", "use-dev-tty"]}
proconio = { version = "0.4.3", features = ["derive"] }